SERVER-76178 Fix moveRange authorization requirements