src/mongo/s/commands/cluster_move_range_cmd.cpp
@@ -103,7 +103,7 @@ public:
             uassert(ErrorCodes::Unauthorized,
                     "Unauthorized",
                     AuthorizationSession::get(opCtx->getClient())
-                        ->isAuthorizedForActionsOnResource(ResourcePattern::forClusterResource(),
+                        ->isAuthorizedForActionsOnResource(ResourcePattern::forExactNamespace(ns()),
                                                            ActionType::moveChunk));
         }
     };
